--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.2.3
   google_sign_in: ^6.2.1
   flutter_signin_button: ^2.0.0
+  google_mobile_ads: ^5.1.0
 
 dev_dependencies:
   flutter_test:
